--- a/style.css
+++ b/style.css
@@ -38,3 +38,23 @@ body{
     background-color: skyblue
     
 }
+
+.iframecontainer {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
+
+}
+
+.responsive-iframe {
+    position: absolute;
+    justify-self: center;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 70%;
+    height: 70%;
+    
+}
